Move most components over to modular css
We're still compiling and loading the sass as we haven't completely transitioned yet.

Signed-off-by: Michael Willmott <mwillmott@gmail.com>

--- a/client/styles/base/variables.css
+++ b/client/styles/base/variables.css
@@ -20,5 +20,5 @@
   --numberOfColumns: 6;
   --gridGutter: 40px;
   --columnWidth: 100px;
-  /*--pageWidth: calc(columnWidth * $numberOfColumns + ($gridGutter * ($numberOfColumns - 1));*/
+  --pageWidth: calc(var(--columnWidth) * var(--numberOfColumns) + (var(--gridGutter) * var(--numberOfColumns) - 1));
 }
